# hpp-walkgen

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  NEWS  README.md  package.xml
doc/: Doxyfile.extra.in  walkgen.py  walkgen.tex
include/hpp/walkgen/: bspline-based.hh  foot-print.hh  foot-trajectory.hh  fwd.hh
src/: CMakeLists.txt  bspline-based.cc  foot-trajectory.cc
tests/: CMakeLists.txt  base-functions.cc  four-steps.cc  six-steps.cc  twenty-steps.cc
